Chronological listing of changes. More detail is usually found in the Git commit messages
and/or the pull requests.


2012-01-23

* Avoiding deprecated method to convert to a C string (thanks to Kushal Pisavadia)


2011-11-03

* Recreated project from scratch with new conventions in Xcode 4.2 (thanks to Matt Di Pasquale)


2011-09-26 

* Arguments only need to be equal, don't have to have same class



Chronological listing of changes in the original Subversion code repository. If a particular 
SVN revision has no entry, that check-in did not involve any code or feature changes.
            
2011-02-15 (r74)

* Added feature to explicitly disable a partial mock
			
			
2011-01-28 (r71)

* Updated example to work with iOS 4.2.


2010-08-21 (r69)

* Added feature to explicitly reject methods on nice mocks (thanks to Heath Borders)
 

2010-08-20 (r68)

* Added feature to forward method to real object from partial mock (thanks to Marco Sandrini)


2010-08-02 (r67)

* Fix to allow block arguments (thanks to Justin DeWind)


2010-07-28 (r62-r65)

* Now building OCMock library for simulator (i386) and device (armv7)
* Updated example to run tests on device                    
* Changed OCMOCK_VALUE macro to be iOS compatible (thanks to Derek Clarkson)


2010-07-21 (r61)

* Added a new target to build a static library for iOS use
* Created an example showing how to use OCMock in an iOS project


2010-05-19 (r57)

* Various small clean-ups; no change in functionality (thanks to Jonah Williams)


2010-04-18 (r56)

* Added block constraints and invocation handler (thanks to Justin DeWind)


2009-10-16 (r55)

* Fixed broken test for array argument descciptions (Craig Beck)
* Disambiguated mock table method name to avoid compiler warning
* Renamed some variables to avoid warnings when using -Wshadow
* Partial mocks are now deallocated as they should
* Fixed problems that occured when using mocks as arguments


2009-08-18 (r54)
