@@ -1,6 +1,9 @@
 Chronological listing of changes. More detail is usually found in the Git commit messages
 and/or the pull requests.
 
+2012-08-23
+
+* Calling a previously expected method on a partial mock is no longer an error.
 
 2012-01-23
 
